# patient-appointment-api

./: .env.example  .gitignore  Makefile  README.md  behave.ini  patient_appointments.db  pyproject.toml  requirements.txt  run_api.py
.github/workflows/: test.yml
allure-report/: index.html
docs/: index.html
infra/: Dockerfile  docker-compose.yml  migrate-sqlite-to-postgres.py
scripts/: backup_restore_db.py
src/adapters/database/: appointment_adapter.py  connection.py  init_db.py  patient_adapter.py  tables.py
src/entrypoints/: __init__.py  appointment_api.py  main.py  patient_api.py
src/models/: __init__.py  api_responses.py  appointment.py  patient.py
src/services/: __init__.py  appointment_service.py  background_tasks.py
src/utils/: appointment_utils.py  timezone_utils.py  validators.py
tests/: __init__.py  conftest.py
tests/behave_features/: appointment.feature  business_logic.feature  environment.py  patient.feature
tests/behave_features/steps/: appointment_steps.py  patient_steps.py
tests/e2e/: conftest.py  test_appointment_e2e.py  test_business_logic_e2e.py  test_patient_e2e.py
tests/unit/: test_appointment_adapter.py  test_appointment_models.py  test_appointment_service.py  test_appointment_utils.py  test_patient_adapter.py  test_tables.py  test_validators.py
